# cirrus

./: .gitignore  Cargo.toml  README.md
migrations/2023-03-08-010600_init/: down.sql  up.sql
src/: lib.rs  util.rs
src/config/: default_config.toml  mod.rs
src/database/: mod.rs  models.rs  schema.rs
