[package]
name = "cirrus"
version = "0.1.0"
authors = ["Niklas Elsbrock"]
edition = "2021"
description = "A simple file cloud server with support for users and file shares"
repository = "https://github.com/nelsbrock/cirrus"
license = "GPL-3.0-only"
keywords = ["cloud", "storage", "file-share"]
categories = []

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", default_features = false }
clap = { version = "4.1.8", features = ["derive"] }
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
getset = "0.1.2"
log = "0.4.17"
rpassword = "7.2.0"
scrypt = "0.11.0"
serde = { version = "1.0.153", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"]}
toml = "0.7.2"
